assets/css/style.css
/* Imports Montserrat as the default font with sans-serif as a backup, taken from googlefonts. 
Also removes default border, padding and margins */

@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

* {
    font-family: 'Montserrat', sans-serif;
    color: #003b49;
    margin: 0;
    padding: 0;
    border: 0;
}

/* sticky nav bar styling */

header {
    position: fixed;
    z-index: 2;
    width: 100%;
    border: solid 1px #003b49;
    height: 50px;
    background-color: white;
}

#title {
    text-transform: uppercase;
    font-weight: bolder;
    float: left;
    line-height: 50px;
    height: 50px;
    padding-left: 10px;
}

nav {
    float: right;
    font-size: 120%;
}

nav > a {
    text-decoration: none;
    font-weight: bold;
    padding-right: 10px;
    line-height: 50px;
    height: 50px;
}

nav a:hover {
    color: blue;
}

/* Hero Image */

#hero-container {
    height: 500px;
    width: 100%;
    overflow: hidden;
    padding-top: 50px;
}

#hero-image {
    height: 500px;
    width: 100%;
    background-image: url("../images/hero-image-pexels-pixabay-resized.jpg");
    background-repeat: no-repeat;
    background-position: center center;
    background-color: red;
}

/* About Us */

#about-us {
    column-count: 2;
    padding: 1em;
    text-align: justify;
}

#about-us-title {
    text-align: center;
    padding-bottom: 0.5em;
}

/* Meet Ups */

/* Sign Up */

/* Footer styling */ 

footer {
    text-align: center;
    width: 100%;
    padding: 1em;
}

footer > a {
    text-decoration: none;
    padding: 0 1.5em;
    font-size: 1.5em;
    font-weight: bold;
}

footer a:hover {
    color: blue;
}

/* Media queries for responsive sizing based on user device size */

